@@ -1,3 +1,7 @@
+2015-01-13  Andrew Pinski  <apinski@cavium.com>
+
+	* gcc.target/aarch64/store-pair-1.c: New testcase.
+
 2014-12-05  Bin Cheng  <bin.cheng@arm.com>
 
 	* gcc.target/aarch64/ldp_stp_1.c: New test.
